[refactor] change evets role model
