# src/main/kotlin/com/arekalov/papersplease/dto/event/EventResponse.kt
@@ -1,10 +1,12 @@
 package com.arekalov.papersplease.dto.event
 
-import com.arekalov.papersplease.model.enums.Priority
+import com.arekalov.papersplease.model.enums.Specialization
+import java.time.Instant
 
 data class EventResponse(
     val id: String,
     val shiftId: String,
+    val time: Instant,
     val description: String,
-    val priority: Priority,
+    val specialization: Specialization? = null,
 )
